fix for filtered cells on smaller screen

--- a/app/styles/responsive.less
+++ b/app/styles/responsive.less
@@ -304,6 +304,9 @@
               background-position: center 8px;
             }
           }
+          &.filter-selected {
+            margin: 1px;
+          }
           &.event {
             .border-radius(50%);
             width:@gridCellSize + 4px;
